# metodos-numericos

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh
include/: aux.hpp  bisection.hpp  derivate.hpp  errors.hpp  fixed_point.hpp  newton.hpp  secant.hpp
include/curve-fitting/: curve-fitting.hpp
include/exception/: invalid-dimension.hpp
include/interpolation/: lagrange.hpp  newton.hpp
include/linalg/: LU-decomposition.hpp  gauss-elimination.hpp  matrix.hpp  thomas-algorithm.hpp  tridiagonal-matrix.hpp
python/: README.md  linear_least_squares.py  linear_least_squares_test.py  quadratic_least_squares.py  quadratic_least_squares_test.py  simpson_1_3_rule.py  simpson_1_3_rule_test.py  simpson_3_8_rule.py  simpson_3_8_rule_test.py  trapezoidal_rule.py  trapezoidal_rule_test.py
src/: bisection.cpp  derivate.cpp  fixed_point.cpp  main.cpp  newton.cpp  secant.cpp
tests/unit-tests/: CMakeLists.txt  LU-decomposition-test.cpp  aux-functions-test.hpp  bisection-test.cpp  fixed-point-test.cpp  gauss-elimination-test.cpp  interpolation-newton-test.cpp  lagrange-test.cpp  matrix-test.cpp  newton-test.cpp  secant-test.cpp  thomas-algorithm-test.cpp
